chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -38,38 +38,45 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "9.3.12",
-    "@nestjs/core": "9.3.12",
-    "@nestjs/platform-express": "9.3.12",
+    "@apollo/server": "4.7.1",
+    "@nestjs/apollo": "11.0.6",
+    "@nestjs/common": "9.4.2",
+    "@nestjs/core": "9.4.2",
+    "@nestjs/graphql": "11.0.6",
+    "@nestjs/mongoose": "9.2.2",
+    "@nestjs/platform-express": "9.4.2",
+    "graphql": "16.6.0",
+    "mongoose": "7.2.1",
     "reflect-metadata": "0.1.13",
-    "rxjs": "7.8.0"
+    "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.5.1",
-    "@commitlint/config-conventional": "17.4.4",
-    "@nestjs/cli": "9.3.0",
-    "@nestjs/schematics": "9.1.0",
-    "@nestjs/testing": "9.3.12",
+    "@commitlint/cli": "17.6.3",
+    "@commitlint/config-conventional": "17.6.3",
+    "@nestjs/cli": "9.5.0",
+    "@nestjs/config": "2.3.2",
+    "@nestjs/schematics": "9.2.0",
+    "@nestjs/testing": "9.4.2",
     "@types/express": "4.17.17",
-    "@types/jest": "29.5.0",
-    "@types/node": "18.15.11",
+    "@types/jest": "29.5.1",
+    "@types/node": "20.2.5",
     "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "5.57.0",
-    "@typescript-eslint/parser": "5.57.0",
-    "eslint": "8.37.0",
+    "@typescript-eslint/eslint-plugin": "5.59.7",
+    "@typescript-eslint/parser": "5.59.7",
+    "eslint": "8.41.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
     "husky": "8.0.3",
     "jest": "29.5.0",
-    "lint-staged": "13.2.0",
-    "prettier": "2.8.7",
+    "lint-staged": "13.2.2",
+    "prettier": "2.8.8",
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
     "ts-jest": "29.1.0",
-    "ts-loader": "9.4.2",
+    "ts-loader": "9.4.3",
     "ts-node": "10.9.1",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.0.3"
+    "typescript": "5.0.4"
   },
   "jest": {
     "moduleFileExtensions": [
