--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.0",
     "eslint": "8.41.0",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
