--- a/package.json
+++ b/package.json
@@ -46,10 +46,16 @@
     "@nestjs/common": "9.4.2",
     "@nestjs/core": "9.4.2",
     "@nestjs/graphql": "11.0.6",
+    "@nestjs/jwt": "^10.0.3",
     "@nestjs/mongoose": "9.2.2",
+    "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "9.4.2",
+    "bcrypt": "5.1.0",
     "graphql": "16.6.0",
     "mongoose": "7.2.1",
+    "passport": "0.6.0",
+    "passport-jwt": "4.0.1",
+    "passport-local": "1.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
   },
@@ -60,9 +66,12 @@
     "@nestjs/config": "2.3.2",
     "@nestjs/schematics": "9.2.0",
     "@nestjs/testing": "9.4.2",
+    "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.1",
     "@types/node": "20.2.5",
+    "@types/passport-jwt": "3.0.8",
+    "@types/passport-local": "1.0.35",
     "@types/supertest": "2.0.12",
     "@typescript-eslint/eslint-plugin": "5.59.7",
     "@typescript-eslint/parser": "5.59.7",
