--- a/package.json
+++ b/package.json
@@ -43,16 +43,16 @@
   "dependencies": {
     "@apollo/server": "4.7.5",
     "@nestjs/apollo": "12.0.7",
-    "@nestjs/common": "10.0.4",
-    "@nestjs/core": "10.0.4",
-    "@nestjs/graphql": "12.0.7",
-    "@nestjs/jwt": "^10.1.0",
+    "@nestjs/common": "10.0.5",
+    "@nestjs/core": "10.0.5",
+    "@nestjs/graphql": "12.0.8",
+    "@nestjs/jwt": "10.1.0",
     "@nestjs/mongoose": "10.0.0",
-    "@nestjs/passport": "^10.0.0",
-    "@nestjs/platform-express": "10.0.4",
+    "@nestjs/passport": "10.0.0",
+    "@nestjs/platform-express": "10.0.5",
     "bcrypt": "5.1.0",
     "graphql": "16.7.1",
-    "mongoose": "7.3.1",
+    "mongoose": "7.3.4",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
@@ -62,28 +62,28 @@
   "devDependencies": {
     "@commitlint/cli": "17.6.6",
     "@commitlint/config-conventional": "17.6.6",
-    "@nestjs/cli": "10.1.0",
+    "@nestjs/cli": "10.1.8",
     "@nestjs/config": "3.0.0",
     "@nestjs/schematics": "10.0.1",
-    "@nestjs/testing": "10.0.4",
+    "@nestjs/testing": "10.0.5",
     "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.17",
-    "@types/jest": "29.5.2",
-    "@types/node": "20.3.3",
-    "@types/passport-jwt": "3.0.8",
+    "@types/jest": "29.5.3",
+    "@types/node": "20.4.1",
+    "@types/passport-jwt": "3.0.9",
     "@types/passport-local": "1.0.35",
     "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "5.60.1",
-    "@typescript-eslint/parser": "5.60.1",
+    "@typescript-eslint/eslint-plugin": "6.0.0",
+    "@typescript-eslint/parser": "6.0.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
     "eslint": "8.44.0",
     "eslint-config-prettier": "8.8.0",
-    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-prettier": "5.0.0",
     "husky": "8.0.3",
-    "jest": "29.5.0",
+    "jest": "29.6.1",
     "lint-staged": "13.2.3",
-    "prettier": "2.8.8",
+    "prettier": "3.0.0",
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
