--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.5",
     "bcrypt": "5.1.0",
+    "google-auth-library": "^9.0.0",
     "graphql": "16.7.1",
     "mongoose": "7.3.4",
     "passport": "0.6.0",
