--- a/package.json
+++ b/package.json
@@ -41,19 +41,19 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@apollo/server": "4.7.5",
+    "@apollo/server": "4.9.1",
     "@nestjs/apollo": "12.0.7",
-    "@nestjs/common": "10.0.5",
-    "@nestjs/core": "10.0.5",
+    "@nestjs/common": "10.1.3",
+    "@nestjs/core": "10.1.3",
     "@nestjs/graphql": "12.0.8",
     "@nestjs/jwt": "10.1.0",
-    "@nestjs/mongoose": "10.0.0",
+    "@nestjs/mongoose": "10.0.1",
     "@nestjs/passport": "10.0.0",
-    "@nestjs/platform-express": "10.0.5",
-    "bcrypt": "5.1.0",
-    "google-auth-library": "^9.0.0",
-    "graphql": "16.7.1",
-    "mongoose": "7.3.4",
+    "@nestjs/platform-express": "10.1.3",
+    "bcrypt": "5.1.1",
+    "google-auth-library": "9.0.0",
+    "graphql": "16.8.0",
+    "mongoose": "7.4.3",
     "passport": "0.6.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
@@ -61,30 +61,30 @@
     "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "17.6.6",
-    "@commitlint/config-conventional": "17.6.6",
-    "@nestjs/cli": "10.1.8",
+    "@commitlint/cli": "17.7.1",
+    "@commitlint/config-conventional": "17.7.0",
+    "@nestjs/cli": "10.1.12",
     "@nestjs/config": "3.0.0",
-    "@nestjs/schematics": "10.0.1",
-    "@nestjs/testing": "10.0.5",
+    "@nestjs/schematics": "10.0.2",
+    "@nestjs/testing": "10.1.3",
     "@types/bcrypt": "5.0.0",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.3",
-    "@types/node": "20.4.1",
+    "@types/node": "20.5.1",
     "@types/passport-jwt": "3.0.9",
     "@types/passport-local": "1.0.35",
     "@types/supertest": "2.0.12",
-    "@typescript-eslint/eslint-plugin": "6.0.0",
-    "@typescript-eslint/parser": "6.0.0",
+    "@typescript-eslint/eslint-plugin": "6.4.0",
+    "@typescript-eslint/parser": "6.4.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.0",
-    "eslint": "8.44.0",
-    "eslint-config-prettier": "8.8.0",
+    "eslint": "8.47.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "husky": "8.0.3",
-    "jest": "29.6.1",
-    "lint-staged": "13.2.3",
-    "prettier": "3.0.0",
+    "jest": "29.6.2",
+    "lint-staged": "14.0.0",
+    "prettier": "3.0.2",
     "source-map-support": "0.5.21",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
