--- a/package.json
+++ b/package.json
@@ -41,57 +41,59 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@apollo/server": "4.9.1",
-    "@nestjs/apollo": "12.0.7",
-    "@nestjs/common": "10.1.3",
-    "@nestjs/core": "10.1.3",
-    "@nestjs/graphql": "12.0.8",
-    "@nestjs/jwt": "10.1.0",
-    "@nestjs/mongoose": "10.0.1",
-    "@nestjs/passport": "10.0.0",
-    "@nestjs/platform-express": "10.1.3",
+    "@apollo/server": "4.10.0",
+    "@nestjs/apollo": "12.0.11",
+    "@nestjs/common": "10.3.0",
+    "@nestjs/core": "10.3.0",
+    "@nestjs/graphql": "12.0.11",
+    "@nestjs/jwt": "10.2.0",
+    "@nestjs/mongoose": "10.0.2",
+    "@nestjs/passport": "10.0.3",
+    "@nestjs/platform-express": "10.3.0",
     "bcrypt": "5.1.1",
-    "google-auth-library": "9.0.0",
-    "graphql": "16.8.0",
-    "mongoose": "7.4.3",
-    "passport": "0.6.0",
+    "cookie-parser": "1.4.6",
+    "google-auth-library": "9.4.2",
+    "graphql": "16.8.1",
+    "mongoose": "8.1.0",
+    "passport": "0.7.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
     "reflect-metadata": "0.1.13",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "18.4.1",
-    "@commitlint/config-conventional": "18.4.0",
-    "@nestjs/cli": "10.2.1",
+    "@commitlint/cli": "18.4.4",
+    "@commitlint/config-conventional": "18.4.4",
+    "@nestjs/cli": "10.3.0",
     "@nestjs/config": "3.1.1",
-    "@nestjs/schematics": "10.0.3",
-    "@nestjs/testing": "10.2.8",
+    "@nestjs/schematics": "10.1.0",
+    "@nestjs/testing": "10.3.0",
     "@types/bcrypt": "5.0.2",
+    "@types/cookie-parser": "1.4.6",
     "@types/express": "4.17.21",
-    "@types/jest": "29.5.8",
-    "@types/node": "20.9.0",
-    "@types/passport-jwt": "3.0.13",
+    "@types/jest": "29.5.11",
+    "@types/node": "20.11.5",
+    "@types/passport-jwt": "4.0.0",
     "@types/passport-local": "1.0.38",
-    "@types/supertest": "2.0.16",
-    "@typescript-eslint/eslint-plugin": "6.11.0",
-    "@typescript-eslint/parser": "6.11.0",
+    "@types/supertest": "6.0.2",
+    "@typescript-eslint/eslint-plugin": "6.19.0",
+    "@typescript-eslint/parser": "6.19.0",
     "class-transformer": "0.5.1",
-    "class-validator": "0.14.0",
-    "eslint": "8.53.0",
-    "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-prettier": "5.0.1",
+    "class-validator": "0.14.1",
+    "eslint": "8.56.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
     "husky": "8.0.3",
     "jest": "29.7.0",
-    "lint-staged": "15.1.0",
-    "prettier": "3.1.0",
+    "lint-staged": "15.2.0",
+    "prettier": "3.2.4",
     "source-map-support": "0.5.21",
-    "supertest": "6.3.3",
+    "supertest": "6.3.4",
     "ts-jest": "29.1.1",
     "ts-loader": "9.5.1",
-    "ts-node": "10.9.1",
+    "ts-node": "10.9.2",
     "tsconfig-paths": "4.2.0",
-    "typescript": "5.2.2"
+    "typescript": "5.3.3"
   },
   "jest": {
     "moduleFileExtensions": [
